@@ -29,6 +29,12 @@ namespace Castle.MicroKernel.Facilities.TypedFactory
 
 		public TypedFactoryComponent(string componentName, Type componentType, IDictionary additionalArguments)
 		{
+			if (string.IsNullOrEmpty(componentName) && componentType == null)
+			{
+				throw new ArgumentNullException("componentType",
+				                                "At least one - componentName or componentType must not be null or empty");
+			}
+
 			this.componentType = componentType;
 			this.componentName = componentName;
 			this.additionalArguments = additionalArguments ?? new Arguments();
@@ -56,18 +62,17 @@ namespace Castle.MicroKernel.Facilities.TypedFactory
 		/// <returns>Resolved component(s).</returns>
 		public virtual object Resolve(IKernel kernel)
 		{
-			// NOTE: should this be moved to an interface? like IReference, similar to IReference<T>, but without CreationContext...
-			if (ComponentName == null)
+			if (string.IsNullOrEmpty(ComponentName) == false && kernel.HasComponent(ComponentName))
 			{
-				return kernel.Resolve(ComponentType,AdditionalArguments);
+				if (ComponentType == null)
+				{
+					return kernel.Resolve(ComponentName, AdditionalArguments);
+				}
+
+				return kernel.Resolve(ComponentName, ComponentType, AdditionalArguments);
 			}
 
-			if (ComponentType == null)
-			{
-				return kernel.Resolve(ComponentName, AdditionalArguments);
-			}
-
-			return kernel.Resolve(ComponentName, ComponentType, AdditionalArguments);
+			return kernel.Resolve(ComponentType, AdditionalArguments);
 		}
 	}
 }
